--- a/GUI/partmod_gui.cbp
+++ b/GUI/partmod_gui.cbp
@@ -9,11 +9,16 @@
 			<Target title="Debug">
 				<Option output="..\..\bin\partmod_gui" prefix_auto="1" extension_auto="1" />
 				<Option object_output="..\..\obj\windows\" />
-				<Option type="0" />
+				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
 				<Compiler>
+					<Add option="-pg" />
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="-pg -lgmon" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="..\..\bin\partmod_gui" prefix_auto="1" extension_auto="1" />
