--- a/diskio/diskio.cbp
+++ b/diskio/diskio.cbp
@@ -8,23 +8,27 @@
 		<Build>
 			<Target title="Debug - Windows">
 				<Option platforms="Windows;" />
-				<Option output="../../bin/diskio" prefix_auto="1" extension_auto="1" />
-				<Option object_output="../../obj/windows/" />
+				<Option output="..\..\bin\diskio" prefix_auto="1" extension_auto="1" />
+				<Option object_output="..\..\obj\windows\" />
 				<Option type="3" />
 				<Option compiler="gcc" />
-				<Option host_application="D:/C++/tvarka/Partmod/bin/partmod_gui.exe" />
+				<Option host_application="D:\C++\tvarka\Partmod\bin\partmod_gui.exe" />
 				<Option createStaticLib="1" />
 				<Compiler>
+					<Add option="-pg" />
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="-pg -lgmon" />
+				</Linker>
 			</Target>
 			<Target title="Release - Windows">
 				<Option platforms="Windows;" />
-				<Option output="../../bin/diskio" prefix_auto="1" extension_auto="1" />
-				<Option object_output="../../obj/windows/" />
+				<Option output="..\..\bin\diskio" prefix_auto="1" extension_auto="1" />
+				<Option object_output="..\..\obj\windows\" />
 				<Option type="3" />
 				<Option compiler="gcc" />
-				<Option host_application="D:/C++/tvarka/Partmod/bin/partmod_gui.exe" />
+				<Option host_application="D:\C++\tvarka\Partmod\bin\partmod_gui.exe" />
 				<Option createStaticLib="1" />
 				<Compiler>
 					<Add option="-O2" />
@@ -35,11 +39,11 @@
 			</Target>
 			<Target title="Release - Linux">
 				<Option platforms="Unix;" />
-				<Option output="/usr/lib/libdiskio-partmod" prefix_auto="1" extension_auto="1" />
-				<Option object_output="../../obj/linux/" />
+				<Option output="\usr\lib\libdiskio-partmod" prefix_auto="1" extension_auto="1" />
+				<Option object_output="..\..\obj\linux\" />
 				<Option type="3" />
 				<Option compiler="gcc" />
-				<Option host_application="D:/C++/tvarka/Partmod/bin/partmod_gui.exe" />
+				<Option host_application="D:\C++\tvarka\Partmod\bin\partmod_gui.exe" />
 				<Option createStaticLib="1" />
 				<Compiler>
 					<Add option="-O2" />
@@ -50,11 +54,11 @@
 			</Target>
 			<Target title="Debug - Linux">
 				<Option platforms="Unix;" />
-				<Option output="/usr/lib/libdiskio-partmodd" prefix_auto="1" extension_auto="1" />
-				<Option object_output="../../obj/linux/" />
+				<Option output="\usr\lib\libdiskio-partmodd" prefix_auto="1" extension_auto="1" />
+				<Option object_output="..\..\obj\linux\" />
 				<Option type="3" />
 				<Option compiler="gcc" />
-				<Option host_application="D:/C++/tvarka/Partmod/bin/partmod_gui.exe" />
+				<Option host_application="D:\C++\tvarka\Partmod\bin\partmod_gui.exe" />
 				<Option createStaticLib="1" />
 				<Compiler>
 					<Add option="-g" />
