git-svn-id: svn://svn.code.sf.net/p/partmodproject/code/trunk@15 3d63fe75-a90b-4577-b595-b0b07fb0d485

--- a/wxGUI/wxGUI.cbp
+++ b/wxGUI/wxGUI.cbp
@@ -98,7 +98,7 @@
 				<Option projectLinkerOptionsRelation="2" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add option="`wx-config --cflags`" />
+					<Add option="`wx-config  --version=2.9 --static=no --unicode=no --debug=no --cflags`" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
