--- a/wxGUI/wxGUI.cbp
+++ b/wxGUI/wxGUI.cbp
@@ -9,7 +9,7 @@
 			<Target title="Debug - Windows">
 				<Option platforms="Windows;" />
 				<Option output="..\..\bin\wxGUI" prefix_auto="1" extension_auto="1" />
-				<Option object_output="..\..\obj\windows" />
+				<Option object_output="..\..\obj\windows\wxGUI" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Option projectLinkerOptionsRelation="2" />
@@ -41,7 +41,7 @@
 			<Target title="Release - Windows">
 				<Option platforms="Windows;" />
 				<Option output="..\..\bin\wxGUI" prefix_auto="1" extension_auto="1" />
-				<Option object_output="..\..\obj\windows" />
+				<Option object_output="..\..\obj\windows\wxGUI" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Option projectLinkerOptionsRelation="2" />
