--- a/GUI/partmod_gui.cbp
+++ b/GUI/partmod_gui.cbp
@@ -8,7 +8,7 @@
 		<Build>
 			<Target title="Debug">
 				<Option output="..\..\bin\partmod_gui" prefix_auto="1" extension_auto="1" />
-				<Option object_output="..\..\obj\windows\" />
+				<Option object_output="..\..\obj\windows\partmod_gui" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -21,7 +21,7 @@
 			</Target>
 			<Target title="Release">
 				<Option output="..\..\bin\partmod_gui" prefix_auto="1" extension_auto="1" />
-				<Option object_output="..\..\obj\windows\" />
+				<Option object_output="..\..\obj\windows\partmod_gui" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
