git-svn-id: svn://svn.code.sf.net/p/partmodproject/code/trunk@42 3d63fe75-a90b-4577-b595-b0b07fb0d485

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,9 @@
 GUI/icon1.ico -text
 Partmod/definitions.cpp -text
 Partmod/definitions.h -text
+Partmod/disk_exception.cpp -text
 Partmod/dllcall.cpp -text
+Partmod/ebr.h -text
 Partmod/partition_manager.cpp -text
 diskio/diskio-linux.cpp -text
 diskio/diskio.cpp -text
