--- a/.gitattributes
+++ b/.gitattributes
@@ -8,14 +8,33 @@ Partmod/ebr.h -text
 Partmod/partition_manager.cpp -text
 diskio/diskio-linux.cpp -text
 diskio/diskio.cpp -text
+wxGUI/ctrl_partition.cpp -text
+wxGUI/ctrl_partition.h -text
+wxGUI/ctrl_partition_list.cpp -text
+wxGUI/ctrl_partition_list.h -text
+wxGUI/ctrl_pending_list.cpp -text
+wxGUI/ctrl_pending_list.h -text
 wxGUI/dlg_create_backup.cpp -text
 wxGUI/dlg_create_backup.h -text
+wxGUI/dlg_fsid_list.cpp -text
+wxGUI/dlg_fsid_list.h -text
 wxGUI/dlg_guid_list.cpp -text
 wxGUI/dlg_guid_list.h -text
 wxGUI/dlg_newpart.cpp -text
 wxGUI/dlg_newpart.hpp -text
 wxGUI/dlg_open_diskimage.cpp -text
 wxGUI/dlg_open_diskimage.h -text
+wxGUI/dlg_partition_properties.cpp -text
+wxGUI/dlg_partition_properties.h -text
+wxGUI/dlg_pending_list.cpp -text
+wxGUI/dlg_pending_list.h -text
 wxGUI/dlg_restore_backup.cpp -text
 wxGUI/dlg_restore_backup.h -text
+wxGUI/dlg_save_changes.cpp -text
+wxGUI/dlg_save_changes.h -text
 wxGUI/main_app.cpp -text
+wxGUI/wxsmith/DlgFsidList.wxs -text
+wxGUI/wxsmith/DlgPartitionProperties.wxs -text
+wxGUI/wxsmith/DlgPendingList.wxs -text
+wxGUI/wxsmith/DlgSaveChanges.wxs -text
+wxGUI/wxsmith/MainFrame.wxs -text
