--- a/wxGUI/wxGUI.cbp
+++ b/wxGUI/wxGUI.cbp
@@ -48,6 +48,7 @@
 				<Option compiler="gcc" />
 				<Option projectLinkerOptionsRelation="2" />
 				<Compiler>
+					<Add option="-fexceptions" />
 					<Add directory="$(#wx)\lib\gcc_lib\msw" />
 					<Add directory="$(#wx)\include" />
 				</Compiler>
@@ -115,8 +116,16 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="ctrl_partition.cpp" />
+		<Unit filename="ctrl_partition.h" />
+		<Unit filename="ctrl_partition_list.cpp" />
+		<Unit filename="ctrl_partition_list.h" />
+		<Unit filename="ctrl_pending_list.cpp" />
+		<Unit filename="ctrl_pending_list.h" />
 		<Unit filename="dlg_create_backup.cpp" />
 		<Unit filename="dlg_create_backup.h" />
+		<Unit filename="dlg_fsid_list.cpp" />
+		<Unit filename="dlg_fsid_list.h" />
 		<Unit filename="dlg_guid_list.cpp" />
 		<Unit filename="dlg_guid_list.h" />
 		<Unit filename="dlg_newpart.cpp" />
@@ -125,6 +134,8 @@
 		<Unit filename="dlg_open_diskimage.h" />
 		<Unit filename="dlg_partition_properties.cpp" />
 		<Unit filename="dlg_partition_properties.h" />
+		<Unit filename="dlg_pending_list.cpp" />
+		<Unit filename="dlg_pending_list.h" />
 		<Unit filename="dlg_restore_backup.cpp" />
 		<Unit filename="dlg_restore_backup.h" />
 		<Unit filename="dlg_save_changes.cpp" />
@@ -143,12 +154,14 @@
 					<wxDialog wxs="wxsmith/DlgNewPart.wxs" src="dlg_newpart.cpp" hdr="dlg_newpart.hpp" fwddecl="0" i18n="1" name="DlgNewPart" language="CPP" />
 					<wxDialog wxs="wxsmith/DlgOpenDiskImage.wxs" src="dlg_open_diskimage.cpp" hdr="dlg_open_diskimage.h" fwddecl="0" i18n="1" name="DlgOpenDiskImage" language="CPP" />
 					<wxDialog wxs="wxsmith/DlgGuidList.wxs" src="dlg_guid_list.cpp" hdr="dlg_guid_list.h" fwddecl="0" i18n="1" name="DlgGuidList" language="CPP" />
+					<wxDialog wxs="wxsmith/DlgFsidList.wxs" src="dlg_fsid_list.cpp" hdr="dlg_fsid_list.h" fwddecl="0" i18n="1" name="DlgFsidList" language="CPP" />
 					<wxDialog wxs="wxsmith/DlgCreateBackup.wxs" src="dlg_create_backup.cpp" hdr="dlg_create_backup.h" fwddecl="0" i18n="1" name="DlgCreateBackup" language="CPP" />
 					<wxDialog wxs="wxsmith/DlgRestoreBackup.wxs" src="dlg_restore_backup.cpp" hdr="dlg_restore_backup.h" fwddecl="0" i18n="1" name="DlgRestoreBackup" language="CPP" />
 					<wxDialog wxs="wxsmith/DlgSaveChanges.wxs" src="dlg_save_changes.cpp" hdr="dlg_save_changes.h" fwddecl="0" i18n="1" name="DlgSaveChanges" language="CPP" />
 					<wxDialog wxs="wxsmith/DlgPartitionProperties.wxs" src="dlg_partition_properties.cpp" hdr="dlg_partition_properties.h" fwddecl="0" i18n="1" name="DlgPartitionProperties" language="CPP" />
 					<wxFrame wxs="wxsmith/MainFrame.wxs" src="main_frame.cpp" hdr="main_frame.hpp" fwddecl="0" i18n="1" name="MainFrame" language="CPP" />
 					<wxPanel wxs="wxsmith/MainPanel.wxs" src="main_panel.cpp" hdr="main_panel.h" fwddecl="0" i18n="1" name="MainPanel" language="CPP" />
+					<wxDialog wxs="wxsmith/DlgPendingList.wxs" src="dlg_pending_list.cpp" hdr="dlg_pending_list.h" fwddecl="0" i18n="1" name="DlgPendingList" language="CPP" />
 				</resources>
 			</wxsmith>
 			<DoxyBlocks>
