--- a/Partmod/Partmod.cbp
+++ b/Partmod/Partmod.cbp
@@ -9,11 +9,11 @@
 			<Script file="lib_finder.script" />
 			<Target title="Debug - Windows">
 				<Option platforms="Windows;" />
-				<Option output="..\..\bin\partmod" prefix_auto="1" extension_auto="1" />
-				<Option object_output="..\..\obj\windows\" />
+				<Option output="../../bin/x32/windows/debug/partmod" prefix_auto="1" extension_auto="1" />
+				<Option object_output="../../obj/x32/windows/debug/partmod" />
 				<Option type="3" />
 				<Option compiler="gcc" />
-				<Option host_application="D:\C++\tvarka\Partmod\bin\wxGUI.exe" />
+				<Option host_application="D:/C++/tvarka/Partmod/bin/wxGUI.exe" />
 				<Option run_host_application_in_terminal="0" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
@@ -26,43 +26,23 @@
 			</Target>
 			<Target title="Release - Windows">
 				<Option platforms="Windows;" />
-				<Option output="..\..\bin\partmod" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="..\..\bin" />
-				<Option object_output="..\..\obj\windows\" />
+				<Option output="../../bin/x32/windows/release/partmod" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="../../bin/x32/windows/release/" />
+				<Option object_output="../../obj/x32/windows/release/partmod" />
 				<Option type="3" />
 				<Option compiler="gcc" />
-				<Option host_application="D:\C++\tvarka\Partmod\bin\wxGUI.exe" />
+				<Option host_application="D:/C++/tvarka/Partmod/bin/wxGUI.exe" />
 				<Option run_host_application_in_terminal="0" />
 				<Option createStaticLib="1" />
 				<Linker>
 					<Add option="-s" />
-					<Add library="..\..\bin\libDiskio.a" />
-				</Linker>
-			</Target>
-			<Target title="Release - Linux">
-				<Option platforms="Unix;" />
-				<Option output="..\..\bin\libpartmod" prefix_auto="1" extension_auto="1" />
-				<Option object_output="..\..\obj\linux\" />
-				<Option type="3" />
-				<Option compiler="gcc" />
-				<Option host_application="D:\C++\tvarka\Partmod\bin\partmod_gui.exe" />
-				<Option run_host_application_in_terminal="0" />
-				<Option createDefFile="1" />
-				<Option createStaticLib="1" />
-				<Compiler>
-					<Add option="-g" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add option="-L ../../bin" />
-					<Add library="diskio-partmod" />
-					<Add directory="..\..\bin" />
+					<Add library="..\..\bin\x32\windows\release\libDiskio.a" />
 				</Linker>
 			</Target>
 			<Target title="Debug - Linux">
 				<Option platforms="Unix;" />
-				<Option output="..\..\bin\libpartmodd" prefix_auto="1" extension_auto="1" />
-				<Option object_output="..\..\obj\linux\" />
+				<Option output="../../bin/x32/linux/debug/partmod" prefix_auto="1" extension_auto="1" />
+				<Option object_output="../../obj/x32/linux/debug/partmod" />
 				<Option type="3" />
 				<Option compiler="gcc" />
 				<Option host_application="partmod_gui.exe" />
@@ -76,11 +56,46 @@
 				<Linker>
 					<Add option="-pg" />
 					<Add library="diskio-partmodd" />
-					<Add directory="..\..\bin" />
+					<Add directory="../../bin" />
 				</Linker>
 				<Environment>
 					<Variable name="a" value="b" />
 				</Environment>
+			</Target>
+			<Target title="Release - Linux">
+				<Option platforms="Unix;" />
+				<Option output="../../bin/x32/linux/release/partmod" prefix_auto="1" extension_auto="1" />
+				<Option object_output="../../obj/x32/linux/release/partmod" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Option host_application="D:/C++/tvarka/Partmod/bin/partmod_gui.exe" />
+				<Option run_host_application_in_terminal="0" />
+				<Option createDefFile="1" />
+				<Option createStaticLib="1" />
+				<Compiler>
+					<Add option="-g" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-L ../../bin" />
+					<Add library="diskio-partmod" />
+					<Add directory="../../bin" />
+				</Linker>
+			</Target>
+			<Target title="Release - Windows x64">
+				<Option platforms="Windows;" />
+				<Option output="../../bin/x64/windows/release/partmod" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="../../bin/x64/windows/release/" />
+				<Option object_output="../../obj/x64/windows/release/partmod" />
+				<Option type="3" />
+				<Option compiler="gnu_gcc_compiler_64_bit" />
+				<Option host_application="D:/C++/tvarka/Partmod/bin/wxGUI.exe" />
+				<Option run_host_application_in_terminal="0" />
+				<Option createStaticLib="1" />
+				<Linker>
+					<Add option="-s" />
+					<Add library="..\..\bin\libDiskio.a" />
+				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
@@ -122,7 +137,7 @@
 			<lib_finder disable_auto="1" />
 			<AutoVersioning>
 				<Scheme minor_max="10" build_max="0" rev_max="0" rev_rand_max="10" build_times_to_increment_minor="100" />
-				<Settings autoincrement="1" date_declarations="1" update_manifest="1" do_auto_increment="0" ask_to_increment="0" language="C++" svn="0" svn_directory="D:\Repositories\Partmod\db" header_path="version.h" />
+				<Settings autoincrement="1" date_declarations="1" use_define="0" update_manifest="1" do_auto_increment="0" ask_to_increment="0" language="C++" svn="0" svn_directory="D:\Repositories\Partmod\db" header_path="version.h" />
 				<Changes_Log show_changes_editor="0" app_title="released version %M.%m.%b of %p" changeslog_path="ChangesLog.txt" />
 				<Code header_guard="VERSION_H" namespace="AutoVersion" prefix="" />
 			</AutoVersioning>
