--- a/wxGUI/wxGUI.cbp
+++ b/wxGUI/wxGUI.cbp
@@ -8,19 +8,19 @@
 		<Build>
 			<Target title="Debug - Windows">
 				<Option platforms="Windows;" />
-				<Option output="..\..\bin\wxGUI" prefix_auto="1" extension_auto="1" />
-				<Option object_output="..\..\obj\windows\wxGUI" />
+				<Option output="../../bin/x32/windows/debug/wxGUI" prefix_auto="1" extension_auto="1" />
+				<Option object_output="../../obj/x32/windows/debug/wxGUI" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Option projectLinkerOptionsRelation="2" />
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-D__WXDEBUG__" />
-					<Add directory="$(#wx)\lib\gcc_lib\mswd" />
-					<Add directory="$(#wx)\include" />
+					<Add directory="$(#wx)/lib/gcc_lib/mswd" />
+					<Add directory="$(#wx)/include" />
 				</Compiler>
 				<ResourceCompiler>
-					<Add directory="$(#wx)\lib\gcc_lib\mswd" />
+					<Add directory="$(#wx)/lib/gcc_lib/mswd" />
 				</ResourceCompiler>
 				<Linker>
 					<Add library="libwxmsw28d_core.a" />
@@ -37,33 +37,35 @@
 					<Add library="oleaut32" />
 					<Add library="gdi32" />
 					<Add library="comdlg32" />
-					<Add directory="$(#wx)\lib\gcc_lib" />
+					<Add directory="$(#wx)/lib/gcc_lib" />
 				</Linker>
 			</Target>
 			<Target title="Release - Windows">
 				<Option platforms="Windows;" />
-				<Option output="..\..\bin\wxGUI" prefix_auto="1" extension_auto="1" />
-				<Option object_output="..\..\obj\windows\wxGUI" />
+				<Option output="../../bin/x32/windows/release/wxGUI" prefix_auto="1" extension_auto="1" />
+				<Option object_output="../../obj/x32/windows/release/wxGUI" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Option projectLinkerOptionsRelation="2" />
 				<Compiler>
-					<Add option="-fexceptions" />
-					<Add directory="$(#wx)\lib\gcc_lib\msw" />
-					<Add directory="$(#wx)\include" />
+					<Add option="-fexceptions -mthreads" />
+					<Add option="-static -static-libgcc -static-libstdc++" />
+					<Add directory="$(#wx)/lib/gcc_lib/msw" />
+					<Add directory="$(#wx)/include" />
 				</Compiler>
 				<ResourceCompiler>
-					<Add directory="$(#wx)\lib\gcc_lib\msw" />
+					<Add directory="$(#wx)/lib/gcc_lib/msw" />
 				</ResourceCompiler>
 				<Linker>
 					<Add option="-s" />
-					<Add library="libwxmsw28_core.a" />
-					<Add library="libwxbase28.a" />
+					<Add option="-static -static-libgcc -static-libstdc++" />
+					<Add library="libwxmsw30u_core.a" />
+					<Add library="libwxbase30u.a" />
 					<Add library="libwxpng.a" />
 					<Add library="libwxjpeg.a" />
 					<Add library="libwxtiff.a" />
 					<Add library="libwxzlib.a" />
-					<Add library="..\..\bin\libPartmod.a" />
+					<Add library="..\..\bin\x32\windows\release\libPartmod.a" />
 					<Add library="ole32" />
 					<Add library="comctl32" />
 					<Add library="winspool" />
@@ -71,13 +73,13 @@
 					<Add library="oleaut32" />
 					<Add library="gdi32" />
 					<Add library="comdlg32" />
-					<Add directory="$(#wx)\lib\gcc_lib" />
+					<Add directory="$(#wx)/lib/gcc_lib" />
 				</Linker>
 			</Target>
 			<Target title="Debug - Linux">
 				<Option platforms="Unix;" />
-				<Option output="..\..\bin\wxGUI" prefix_auto="1" extension_auto="1" />
-				<Option object_output="..\..\obj\linux" />
+				<Option output="../../bin/x32/linux/debug/wxGUI" prefix_auto="1" extension_auto="1" />
+				<Option object_output="../../obj/x32/linux/debug/wxGUI" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Option projectLinkerOptionsRelation="2" />
@@ -95,8 +97,8 @@
 			</Target>
 			<Target title="Release - Linux">
 				<Option platforms="Unix;" />
-				<Option output="..\..\bin\wxGUI" prefix_auto="1" extension_auto="1" />
-				<Option object_output="..\..\obj\linux" />
+				<Option output="../../bin/x32/linux/release/wxGUI" prefix_auto="1" extension_auto="1" />
+				<Option object_output="../../obj/x32/linux/release/wxGUI" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Option projectLinkerOptionsRelation="2" />
@@ -110,6 +112,42 @@
 					<Add library="libpartmod" />
 					<Add library="libdiskio-partmod" />
 					<Add directory="$(TARGET_OUTPUT_DIR)" />
+				</Linker>
+			</Target>
+			<Target title="Release - Windows x64">
+				<Option platforms="Windows;" />
+				<Option output="../../bin/x64/windows/release/wxGUI" prefix_auto="1" extension_auto="1" />
+				<Option object_output="../../obj/x64/windows/release/wxGUI" />
+				<Option type="0" />
+				<Option compiler="gnu_gcc_compiler_64_bit" />
+				<Option projectLinkerOptionsRelation="2" />
+				<Compiler>
+					<Add option="-fexceptions" />
+					<Add option="-DNDEBUG" />
+					<Add directory="$(#wx64)/lib/gcc_lib/mswu" />
+					<Add directory="$(#wx64)/include" />
+				</Compiler>
+				<ResourceCompiler>
+					<Add directory="$(#wx)/lib/gcc_lib/msw" />
+				</ResourceCompiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-static -static-libgcc -static-libstdc++" />
+					<Add library="libwxmsw30u_core.a" />
+					<Add library="libwxbase30u.a" />
+					<Add library="libwxpng.a" />
+					<Add library="libwxjpeg.a" />
+					<Add library="libwxtiff.a" />
+					<Add library="libwxzlib.a" />
+					<Add library="..\..\bin\x64\windows\release\libPartmod.a" />
+					<Add library="ole32" />
+					<Add library="comctl32" />
+					<Add library="winspool" />
+					<Add library="uuid" />
+					<Add library="oleaut32" />
+					<Add library="gdi32" />
+					<Add library="comdlg32" />
+					<Add directory="$(#wx64)/lib/gcc_lib" />
 				</Linker>
 			</Target>
 		</Build>
