--- a/diskio/diskio.cbp
+++ b/diskio/diskio.cbp
@@ -8,11 +8,11 @@
 		<Build>
 			<Target title="Debug - Windows">
 				<Option platforms="Windows;" />
-				<Option output="..\..\bin\diskio" prefix_auto="1" extension_auto="1" />
-				<Option object_output="..\..\obj\windows\" />
+				<Option output="../../bin/x32/windows/debug/diskio" prefix_auto="1" extension_auto="1" />
+				<Option object_output="../../obj/x32/windows/debug/diskio" />
 				<Option type="3" />
 				<Option compiler="gcc" />
-				<Option host_application="D:\C++\tvarka\Partmod\bin\partmod_gui.exe" />
+				<Option host_application="D:/C++/tvarka/Partmod/bin/partmod_gui.exe" />
 				<Option run_host_application_in_terminal="0" />
 				<Option createStaticLib="1" />
 				<Compiler>
@@ -21,27 +21,40 @@
 			</Target>
 			<Target title="Release - Windows">
 				<Option platforms="Windows;" />
-				<Option output="..\..\bin\diskio" prefix_auto="1" extension_auto="1" />
-				<Option object_output="..\..\obj\windows\" />
+				<Option output="../../bin/x32/windows/release/diskio" prefix_auto="1" extension_auto="1" />
+				<Option object_output="../../obj/x32/windows/release/diskio" />
 				<Option type="3" />
 				<Option compiler="gcc" />
-				<Option host_application="D:\C++\tvarka\Partmod\bin\partmod_gui.exe" />
+				<Option host_application="D:/C++/tvarka/Partmod/bin/partmod_gui.exe" />
 				<Option run_host_application_in_terminal="0" />
 				<Option createStaticLib="1" />
 				<Compiler>
-					<Add option="-std=c++0x" />
+					<Add option="-std=c++11" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
 				</Linker>
 			</Target>
-			<Target title="Release - Linux">
+			<Target title="Debug - Linux">
 				<Option platforms="Unix;" />
-				<Option output="..\..\bin\libdiskio-partmod" prefix_auto="1" extension_auto="1" />
-				<Option object_output="..\..\obj\linux\" />
+				<Option output="../../bin/x32/linux/debug/libdiskio-partmod" prefix_auto="1" extension_auto="1" />
+				<Option object_output="../../obj/x32/linux/debug/diskio" />
 				<Option type="3" />
 				<Option compiler="gcc" />
-				<Option host_application="D:\C++\tvarka\Partmod\bin\partmod_gui.exe" />
+				<Option host_application="D:/C++/tvarka/Partmod/bin/partmod_gui.exe" />
+				<Option run_host_application_in_terminal="0" />
+				<Option createStaticLib="1" />
+				<Compiler>
+					<Add option="-g" />
+				</Compiler>
+			</Target>
+			<Target title="Release - Linux">
+				<Option platforms="Unix;" />
+				<Option output="../../bin/x32/linux/release/libdiskio-partmod" prefix_auto="1" extension_auto="1" />
+				<Option object_output="../../obj/x32/linux/release/diskio" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Option host_application="D:/C++/tvarka/Partmod/bin/partmod_gui.exe" />
 				<Option run_host_application_in_terminal="0" />
 				<Option createStaticLib="1" />
 				<Compiler>
@@ -50,18 +63,21 @@
 					<Add option="-fexceptions" />
 				</Compiler>
 			</Target>
-			<Target title="Debug - Linux">
-				<Option platforms="Unix;" />
-				<Option output="..\..\bin\libdiskio-partmodd" prefix_auto="1" extension_auto="1" />
-				<Option object_output="..\..\obj\linux\" />
+			<Target title="Release - Windows x64">
+				<Option platforms="Windows;" />
+				<Option output="../../bin/x64/windows/release/diskio" prefix_auto="1" extension_auto="1" />
+				<Option object_output="../../obj/x64/windows/release/diskio" />
 				<Option type="3" />
-				<Option compiler="gcc" />
-				<Option host_application="D:\C++\tvarka\Partmod\bin\partmod_gui.exe" />
+				<Option compiler="gnu_gcc_compiler_64_bit" />
+				<Option host_application="D:/C++/tvarka/Partmod/bin/partmod_gui.exe" />
 				<Option run_host_application_in_terminal="0" />
 				<Option createStaticLib="1" />
 				<Compiler>
-					<Add option="-g" />
+					<Add option="-std=c++11" />
 				</Compiler>
+				<Linker>
+					<Add option="-s" />
+				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
@@ -76,6 +92,7 @@
 		<Unit filename="diskio-windows.cpp">
 			<Option target="Debug - Windows" />
 			<Option target="Release - Windows" />
+			<Option target="Release - Windows x64" />
 		</Unit>
 		<Unit filename="diskio.cpp" />
 		<Unit filename="diskio.hpp" />
