--- a/wxGUI/wxGUI.cbp
+++ b/wxGUI/wxGUI.cbp
@@ -9,6 +9,7 @@
 			<Target title="Debug - Windows">
 				<Option platforms="Windows;" />
 				<Option output="../../bin/x32/windows/debug/wxGUI" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="../../bin/x32/windows/debug/" />
 				<Option object_output="../../obj/x32/windows/debug/wxGUI" />
 				<Option type="0" />
 				<Option compiler="gcc" />
@@ -43,6 +44,7 @@
 			<Target title="Release - Windows">
 				<Option platforms="Windows;" />
 				<Option output="../../bin/x32/windows/release/wxGUI" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="../../bin/x32/windows/release/" />
 				<Option object_output="../../obj/x32/windows/release/wxGUI" />
 				<Option type="0" />
 				<Option compiler="gcc" />
@@ -50,7 +52,7 @@
 				<Compiler>
 					<Add option="-fexceptions -mthreads" />
 					<Add option="-static -static-libgcc -static-libstdc++" />
-					<Add directory="$(#wx)/lib/gcc_lib/msw" />
+					<Add directory="$(#wx)/lib/gcc_lib/mswu" />
 					<Add directory="$(#wx)/include" />
 				</Compiler>
 				<ResourceCompiler>
@@ -116,11 +118,13 @@
 			<Target title="Release - Windows x64">
 				<Option platforms="Windows;" />
 				<Option output="../../bin/x64/windows/release/wxGUI" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="../../bin/x64/windows/release/" />
 				<Option object_output="../../obj/x64/windows/release/wxGUI" />
 				<Option type="0" />
 				<Option compiler="gnu_gcc_compiler_64_bit" />
 				<Option projectLinkerOptionsRelation="2" />
 				<Compiler>
+					<Add option="-std=c++11" />
 					<Add option="-fexceptions" />
 					<Add option="-DNDEBUG" />
 					<Add directory="$(#wx64)/lib/gcc_lib/mswu" />
@@ -131,7 +135,6 @@
 				</ResourceCompiler>
 				<Linker>
 					<Add option="-s" />
-					<Add option="-static -static-libgcc -static-libstdc++" />
 					<Add library="libwxmsw30u_core.a" />
 					<Add library="libwxbase30u.a" />
 					<Add library="libwxpng.a" />
@@ -155,9 +158,6 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Linker>
-			<Add library="pthread" />
-		</Linker>
 		<Unit filename="ctrl_partition.cpp" />
 		<Unit filename="ctrl_partition.h" />
 		<Unit filename="ctrl_partition_list.cpp" />
